--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,9 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django
 migrations/
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
