--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -15,7 +15,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd HireHub-Piro21/
+            cd HireHub/
             git pull origin main
             source venv/bin/activate
             pip3 install -r requirements.txt
