--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,40 @@
 amqp==5.2.0
 annotated-types==0.7.0
-anyio==4.4.0
+anyio==4.6.0
 asgiref==3.8.1
-billiard==4.2.0
+billiard==4.2.1
 celery==5.4.0
-certifi==2024.7.4
+certifi==2024.8.30
+chardet==5.2.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 distro==1.9.0
-Django==5.0.7
+Django==5.1.1
 django-environ==0.11.2
+environ==1.0
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
+httpcore==1.0.6
+httpx==0.27.2
+idna==3.10
 jiter==0.5.0
-kombu==5.4.0
-openai==1.40.3
-prompt_toolkit==3.0.47
-psycopg==3.2.1
-psycopg2==2.9.9
-pydantic==2.8.2
-pydantic_core==2.20.1
+kombu==5.4.2
+openai==1.51.0
+pillow==10.4.0
+prompt_toolkit==3.0.48
+pydantic==2.9.2
+pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-redis==5.0.8
+reportlab==4.2.5
+setuptools==75.1.0
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 tqdm==4.66.5
 typing_extensions==4.12.2
-tzdata==2024.1
+tzdata==2024.2
 vine==5.1.0
 wcwidth==0.2.13
+wheel==0.44.0
